tests/type-data/should_fail/TDRecordsH98.hs
{-# LANGUAGE TypeData #-}
module TDRecordsH98 where

type data Record a = Cons { field :: a }
